# pipeline-tools

./: .dockerignore  .envrc.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.site  Makefile  README.md  RELEASE.md  _pipely_log.txt  commitlint.py  docker-compose.yml  pipely  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: auto-tag.yml  ci.yml  commitlint.yml  pages.yml  pypi-publish.yml  release-please.yml  release.yml  site-docker.yml  testpypi-publish.yml  windows-exe.yml
ansible/: dev.yml  pipeline-tools.yml  pipely.yml  release.yml  windows_ssh.yml
ansible/inventory/: windows_ssh.ini
ansible/tasks/: windows_dev.yml
docs/: _config.yml  ansible_local.md  artist_cli.md  backlog.md  changelog.html  index.html  pipely_artist_loop.md
docs/assets/css/: style.css
docs/assets/js/: main.js  plausible.js
src/pipeline_tools/: __init__.py  __main__.py  approval_cli.py  asset_cli.py  cli.py  db_cli.py  folders.py  interactive.py  interactive_commands.py  interactive_ui.py  os_utils.py  output.py  project_cli.py  report_cli.py  schedule_cli.py  shot_cli.py  storage.py  task_cli.py
src/pipeline_tools/core/: cli.py  db.py  fs_utils.py  git_utils.py  observability.py  paths.py
src/pipeline_tools/tools/: artist_loop.py
src/pipeline_tools/tools/admin/: __init__.py  main.py
tests/: conftest.py  test_admin_workfiles.py  test_approval_cli.py  test_artist_loop_cli.py  test_asset_cli.py  test_build_assets.py  test_cli_entrypoint.py  test_cli_import.py  test_cli_init.py  test_core_db.py  test_core_paths.py  test_db_cli.py  test_dcc_launcher.py  test_interactive_nlp.py  test_interactive_passthrough.py  test_os_utils.py  test_passthrough_modules_signature.py  test_project_cli.py  test_project_creator.py  test_report_cli.py  test_schedule_cli.py  test_shot_cli.py  test_shows_delete_purge.py  test_task_cli.py  test_tasks_versions_crud.py
(+26 files in other folders)
