[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-tools"
version = "0.1.3"
description = "Small utilities for pipeline folder creation and helpers."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Pipeline Tools", email = "pipeline@example.com" }]
license = { text = "MIT" }
dependencies = ["typer>=0.9,<1.0", "rich>=13.7,<14.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pipeline-tools = "pipeline_tools.cli:run"
