[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipely"
version = "0.1.16"
description = "Pipeline management made lovely - Artist-friendly CLI for creative production workflows."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Pipely", email = "toucan.sg@gmail.com" }]
license = { text = "MIT" }
dependencies = ["typer>=0.9,<1.0", "rich>=13.7,<14.0", "prompt-toolkit>=3.0,<4.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"pipeline_tools" = [
  "tools/project_creator/reference/**/*",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pipely = "pipeline_tools.cli:run"
